# proxima_frontend

./: .gitignore  Cargo.toml  README.md  styles.css
src/: alerts.rs  app.rs  db_sync.rs  html_parsing.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/tabs/: access_modes_tab.rs  chat_configs_tab.rs  chat_tab.rs  home_tab.rs  mod.rs  notification_tab.rs  tags_tab.rs
