[package]
name = "proxima_frontend-ui"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.23", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
gloo-utils = {version = "0.2.0", features = ["serde"]}
proxima_backend = { git = "https://github.com/Pedro-W21/proxima_backend.git" }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
reqwest = { version = "0.12", features = ["json"] }
selectrs = { version = "0.0.2", features = ["yew"] }
markdown = "1.0.0"
chrono = {version = "0.4.38", features = ["serde"]}
gloo-events = "0.2.0"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", features = ["all"] }
futures = "0.3.31"
html_parser = "0.7.0"

[workspace]
members = ["src-tauri"]

