[package]
name = "proxima_frontend"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "proxima_frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proxima_backend = { git = "https://github.com/Pedro-W21/proxima_backend.git" }
proxima_backend_server = { git = "https://github.com/Pedro-W21/proxima_backend.git"}
openai = "1.1.0"
tauri-plugin-http = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }

